sharedcode/twitter.css
@charset "UTF-8";

.fixed #wdn_navigation_bar {
	height:0;
}

a.tooltip {
	display:block;
}

a.moreButton {
	background-image: url(../images/more.gif);
	background-repeat: repeat-x;
	border: 1px solid #CCC;
	border-color: #DDDD #AAA #AAA #DDD;
	display: block;
	font-size: 1.4em;
	font-weight: bold;
	line-height: 30px;
	margin:0 auto;
	margin-bottom:10px;
	text-align: center;
	text-decoration: none;
	width: 95%;
	
	/* HTML5 */
	border-radius: 5px;
	-khtml-border-radius: 5px;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;	
}

a.moreButton:hover {
	background-position:left -78px;
    border:1px solid #BBBBBB;
    text-decoration:none;
}

.tweetHeader {
	border-bottom: #DDD 2px dashed;
	margin:0px 25px 18px 25px;
	padding-bottom: 0;
}

.boxheader {
	background-color:#efefef;
	background-image:url(../images/twitter_header.jpg);
	background-repeat:no-repeat;
	border-top:2px solid #C2C2C2;
	border-bottom:2px solid #9E0202;
	height:220px;
	margin-bottom:60px;
	margin-top:30px;
	width:984px;
}

.boxheader .blurb {
	float:right;
	font-size:1.2em;
	line-height:28px;
	margin-top: -45px;
	text-align:right;
	width:485px;	
}

#maincontent .boxheader .blurb h3 {
	float:left;
	font-family: Helvetica,Arial,sans-serif;
	font-size: 2em;
	font-weight: bold;
	letter-spacing: -0.038em;
	line-height: 1.1em;
	margin: 0 0 18px 0;
	padding-bottom: 0.1em;
	word-spacing: -0.05em;
}

.boxheader .blurb p {
	color:#666;
	float:right;
	padding-left: 100px;
	padding-right:25px;
}

.bubble {
	display:block;
	padding: 15px 10px 5px 10px;
	margin: 0;
}

#maincontent {
	background-color:#B70302;
	margin:-55px -12px 0;
	width:984px;
	z-index:0;
	
	/* HTML5 */
	box-shadow: 0px 1px 5px #AAA;
	-khtml-box-shadow: 0px 1px 5px #AAA;
	-moz-box-shadow: 0px 1px 5px #AAA;
	-webkit-box-shadow: 0px 1px 5px #AAA;
}

#maincontent h4 {
	color: #9E0202;
	font-weight:bold;
}

#maincontent .top_link {
	bottom:26px;
	float:right;
	font-weight:bold;
	padding-right:5px;
	position:relative;
}

#maincontent .top_link a {
	color:#fff;
	text-decoration:none;
}

#maincontent .top_link a span:hover {
	text-decoration:underline;
}

#maincontent .tweet .origination a {
	color:#8c8c8c;
	text-decoration:underline;
}

#maincontent .tweet .origination a:hover {
	text-decoration:none;
}

#maincontent ul.wdn_tabs {
	border-bottom:none;
	bottom: 45px;
    height: 0;
    position: relative;
}

#maincontent ul.wdn_tabs li {
	font-family: Helvetica,Arial,sans-serif;
	font-size:18px;
}

#maincontent .tweetBox .wdn_tabs_content {
	margin-top:57px;
}

.right {
	float:right;
	margin-top:-15px;
	position:absolute;
	right:60px;	
	width:260px;
}

.right .bubble p {
	color:#3e3e3e;
	font-size:11px;
}

.right .h4 {
	margin-bottom:10px;
}

.right .bubble ul.socialbuttons {
	list-style-type: none;
	margin: 0;
	margin-left: -15px;
	padding: 0;
}

.right .bubble ul.socialbuttons li {
	display:inline;
	float: left;
	margin:0 10px;
}

.right .mini_container {
	background-color: #F7F7F7;
	border:1.5px solid #DDD;
	margin-bottom: 1em;
	margin-top:15px;
	padding: 5px;
	
	/* HTML5 */
	border-radius: 5px;
	-khtml-border-radius: 5px;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
}

.socialbuttons a.facebook {
	background: url('../images/social_facebook.png') bottom;
	display: block;
	height: 50px;
	text-indent: -99999px;
	width: 50px;
}

.socialbuttons a.facebook:hover {
	background-position:0 100px;
}

.socialbuttons a.facebook:active {
	background-position:0 0;
}

.socialbuttons a.twitter {
	background: url('../images/social_twitter.png') bottom;
	display: block;
	height: 50px;
	text-indent: -99999px;
	width: 50px;
}

.socialbuttons a.twitter:hover {
	background-position:0 100px;
}

.socialbuttons a.twitter:active {
	background-position:0 0;
}

.socialbuttons a.youtube {
	background: url('../images/social_youtube.png') bottom;
	display: block;
	height: 50px;
	text-indent: -99999px;
	width: 50px;
}

.socialbuttons a.youtube:hover {
	background-position:0 100px;
}

.socialbuttons a.youtube:active {
	background-position:0 0;
}


/* These are for index.php */

.tweet {
	background-color:#efefef;
	margin-bottom:4px;
	margin-left:-30px;
	padding:5px;
	width:547px;
	
	/* HTML5 */
	border-radius: 6px 0px 0px 6px;
	-khtml-border-radius: 6px 0px 0px 6px; 
	-moz-border-radius: 6px 0px 0px 6px; 
	-webkit-border-radius: 6px 0px 0px 6px;
}

.wdn_tabs_content
.tweet:hover {
	background-color:#fff;
	
	/* HTML5 */
	box-shadow: inset 0px 18px 20px -23px #c1c1c1, inset 0px -15px 20px -23px #c1c1c1;
	-khtml-box-shadow: inset 0px 18px 20px -23px #c1c1c1, inset 0px -15px 20px -23px #c1c1c1;
	-moz-box-shadow: inset 0px 18px 20px -23px #c1c1c1, inset 0px -15px 20px -23px #c1c1c1;
	-webkit-box-shadow: inset 0px 18px 20px -23px #c1c1c1, inset 0px -15px 20px -23px #c1c1c1;	
}

.tweet .avatar {
	float:left;
	padding-right:5px;
}

.tweet .origination {
	color:#8c8c8c;
	font-size:0.85em;
}

.tweet .text {
	font-size:1em;
}

.tweetBox {
	background-color:#fff;
	border:1.5px solid #e6e6e6;
	left:85px;
	margin-bottom:30px;
	position:relative;
	width:506px;
	
	/* HTML5 */
	border-radius: 8px;
	-khtml-border-radius: 8px; 
	-moz-border-radius: 8px; 
	-webkit-border-radius: 8px;
}

.tweetBox .shadow {
	bottom:30px;
	height:10px;
	position:relative;
	right:520px;
	width:540px;
	
	/* HTML5 */
	box-shadow: 0px 7px 6px -2px rgba(0, 0, 0, .3);	
	-khtml-box-shadow: 0px 7px 6px -2px rgba(0, 0, 0, .3);
	-moz-box-shadow: 0px 7px 6px -2px rgba(0, 0, 0, .3);
	-webkit-box-shadow: 0px 7px 6px -2px rgba(0, 0, 0, .3);
	
}

/* These are for orgs.php */

.tweet.friend {
	margin:0 auto;
	padding:10px 0px;
	width:460px;
	
	/* HTML5 */
	border-radius: 0; 
	-khtml-border-radius: 0;
	-moz-border-radius: 0; 
	-webkit-border-radius: 0;
}

.tweet.friend.row1 {
	background-color:#efefef;
	border-bottom:1px solid #ddd;
	border-top:1px solid #ddd;
}

.tweet.friend.row2 {
	background-color:white;
}

.tweet.friend .avatar {
	padding-left:5px;
}

.tweet.friend .text {
	margin-left: 65px;
}

/* * * * * * * * * * * */


.logo_bg {
	background-color:#B70302;
	background-image:url(../images/logo_bg.gif);
	background-repeat:repeat-x;
	border:1px solid #B70302;
	bottom:2px;
	left:760px;
	padding:7px 5px;
	position:relative;
	width: 194px;
	
	/* HTML5 */
	background: -moz-linear-gradient(#B70302, #C00 88%, #f66);
	background: -ms-linear-gradient(#B70302, #C00 88%, #f66);
	background: -webkit-gradient(linear,left top,left bottom,color-stop(0, #B70302),color-stop(.88, #C00),color-stop(1, #f66));
	
	border-radius:0 0 6px 6px;
	-khtml-border-radius:0 0 6px 6px;
	-moz-border-radius:0 0 6px 6px;
	-webkit-border-radius:0 0 6px 6px;
	
	box-shadow: 0px 5px 5px -5px #AAA;
	-khtml-box-shadow: 0px 5px 5px -5px #AAA;
	-moz-box-shadow: 0px 5px 5px -5px #AAA;
	-webkit-box-shadow: 0px 5px 5px -5px #AAA;
}

.twitter_logo {
	background: url('../images/social_logo.png') bottom;
	display: block;
	height: 38px;
	text-indent: -99999px;	
	width: 194px;
}

.twitter_logo:hover {
	background-position:0 76px;
}

.twitter_logo:active {
	background-position:0 0;
}

.wrap {
	bottom:4px;
	border-top: 20px solid gray;
	border-right: 20px solid transparent;
	height: 0;
	left:507px;	
	position:relative;
	width: 0;
}

